# email-triage-openenv

./: .gitignore  Dockerfile  README.md  demo.py  env.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  server.py  tasks.py
server/: __init__.py  app.py
