[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "email-triage-openenv"
version = "1.0.0"
description = "OpenEnv-compatible Email Triage RL Agent for Indian inbox triage."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "shlvxm" }
]
dependencies = [
  "fastapi==0.110.1",
  "uvicorn[standard]==0.29.0",
  "pydantic==2.6.4",
  "gymnasium==0.29.1",
  "numpy==1.26.4",
  "openenv-core>=0.2.0",
  "requests==2.31.0",
  "pillow==10.2.0",
]

[project.scripts]
server = "server.app:main"

[tool.setuptools]
py-modules = ["inference", "env", "models", "tasks", "demo"]
include-package-data = true

[tool.setuptools.packages.find]
include = ["server*"]
